--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,25 @@ spring:
     name: CWC_backend_springboot
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+
     # This line is used  to set the URL link of the database
     url: jdbc:mysql://localhost:3306/cwc_backend_db?serverTimezone=GMT-8
+
     # Configure the password and username of the database before connecting
     username: root
     password: root
 
-# This line is used to change the server's port number
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+
+# This line is used to config the server's port number
 server:
     port: 9090
+
+mybatis:
+#  mapper-locations:
+    configuration:
+      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
